[metadata]
name = quartic-ansible-runner
author = Quartic.ai
author_email = manoj@quartic.ai
summary = "Consistent Ansible Python API and CLI with container and process isolation runtime capabilities"
home_page = https://quartic.ai
description_file = README.md
description_content_type = text/markdown

[entry_points]
console_scripts =
    ansible-runner = ansible_runner.__main__:main

[files]
packages =
    ansible_runner
data-files =
    share/ansible-runner/utils = utils/*

[pep8]
# W503 - Line break occurred before a binary operator
ignore=W503
exclude=.tox,venv

[flake8]
# W503 - Line break occurred before a binary operator
ignore=W503
max-line-length=160
exclude=.tox,venv
